Vinculando correctamente los estilos del css en la etiqueta link de productCart

--- a/views/productCart.html
+++ b/views/productCart.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reservas</title>
-    <link rel="stylesheet" href="/css/productCart.css">
+    <link rel="stylesheet" href="../public/css/productCart.css">
     <script src="https://kit.fontawesome.com/3753969343.js" crossorigin="anonymous"></script>
 
 </head>
