Modificando código para una página productCart responsive

--- a/views/productCart.html
+++ b/views/productCart.html
@@ -14,7 +14,7 @@
     <header>
 
         <div class="logo-header">
-            <img src="/images/logo-blanco-40trip.svg" alt="Logo de 40Trip">
+            <img src="file:///C:/Users/matia/OneDrive/Escritorio/40Trip/grupo_7/public/images/logo-40trip.svg" alt="Logo de 40Trip">
         </div>
 
         <nav class="menu-principal">
@@ -80,7 +80,7 @@
 
                 <ul> 
                     <li> <h3> Hosteria 03</h3> </li> 
-                    <li> <p> Av.Pellegrini 937, Ushuaia </p> </li> 
+                    <li> <p> Av.Pellegrini 937, Tierra del Fuego </p> </li> 
                 </ul>
 
                 <ul>
@@ -107,7 +107,7 @@
             <div class="footer1">
 
                 <div class="logo-footer">
-                    <img src="/images/logo-blanco-40trip.svg" alt="Logo de 40Trip">
+                    <img src="file:///C:/Users/matia/OneDrive/Escritorio/40Trip/grupo_7/public/images/logo-40trip.svg" alt="Logo de 40Trip">
                 </div>
 
                 <nav class="nav-bar">
