--- a/public/css/productCart.css
+++ b/public/css/productCart.css
@@ -35,6 +35,7 @@ header nav a {
 }
 
 div img {
+    background-color: white;
     max-height: 5rem;
     max-width: 10rem;
 }
@@ -46,7 +47,7 @@ main .titulo {
 
 main div section {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 
@@ -54,6 +55,7 @@ main div section ul {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    width: 33%;
 }
 
 main div section ul li {
@@ -122,4 +124,60 @@ footer div .nav-bar i {
     margin-right: 1rem;
     margin-bottom: 1.5rem;
     margin-top: 0.5rem;
+}
+
+@media (max-width: 361px) {
+
+} 
+
+@media (max-width: 560px) {
+
+    footer .footer1 {
+        flex-direction: column-reverse;
+    }
+
+    footer .logo-footer{
+        align-self: end;
+    }
+
+} 
+
+@media (max-width: 768px) {
+
+    main div section {
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: column;
+    }
+    
+
+    main div section ul {
+        justify-content: center;
+        flex-wrap: wrap;
+        flex-direction: column;
+        width: 33%;
+    }
+
+    main div .sec1 {
+        width: 70%;
+        max-width: 400px;
+        align-self: center;
+        margin: auto;
+    }
+    
+    main div .sec2 {
+        width: 70%;
+        max-width: 400px;
+        align-self: center;
+        margin: auto;
+    }
+    
+    main div .sec3 {
+        width: 70%;
+        max-width: 400px;
+        align-self: center;
+        margin: auto;
+        margin-bottom: 2rem;
+    }
+
 }
