Cambiando algunos estilos de letras

--- a/views/productCart.html
+++ b/views/productCart.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reservas</title>
     <link rel="stylesheet" href="../public/css/productCart.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300&family=Karla:wght@300&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3753969343.js" crossorigin="anonymous"></script>
 
 </head>
@@ -14,7 +17,7 @@
     <header>
 
         <div class="logo-header">
-            <img src="file:///C:/Users/matia/OneDrive/Escritorio/40Trip/grupo_7/public/images/logo-40trip.svg" alt="Logo de 40Trip">
+            <img src="../public/images/logo-blanco-40trip.svg" alt="Logo de 40Trip">
         </div>
 
         <nav class="menu-principal">
@@ -40,7 +43,7 @@
 
                 </ul>
 
-                <ul>
+                <ul class="ul-fecha">
 
                     <li> <h3> Fecha</h3> </li>
                     <li> <p> Del xx/xx al xx/xx </p> </li>
@@ -62,7 +65,7 @@
 
                 </ul>
 
-                <ul>
+                <ul class="ul-fecha">
 
                     <li> <h3> Fecha</h3> </li>
                     <li> <p> Del xx/xx al xx/xx </p> </li>
@@ -83,7 +86,7 @@
                     <li> <p> Av.Pellegrini 937, Tierra del Fuego </p> </li> 
                 </ul>
 
-                <ul>
+                <ul class="ul-fecha">
 
                     <li> <h3> Fecha</h3> </li>
                     <li> <p> Del xx/xx al xx/xx </p> </li>
@@ -107,7 +110,7 @@
             <div class="footer1">
 
                 <div class="logo-footer">
-                    <img src="file:///C:/Users/matia/OneDrive/Escritorio/40Trip/grupo_7/public/images/logo-40trip.svg" alt="Logo de 40Trip">
+                    <img src="../public/images/logo-blanco-40trip.svg" alt="Logo de 40Trip">
                 </div>
 
                 <nav class="nav-bar">
