--- a/public/css/productCart.css
+++ b/public/css/productCart.css
@@ -10,7 +10,10 @@
     --celeste: #009fb7;
     --rosado: #e4d6a7;
     --grisclaro: #eaeaea;
-    /* Fon family */
+    /* Font family */
+    --inter:'Inter', sans-serif;;
+    /* Font sizes */
+
 }
 
 /* Header */
@@ -35,7 +38,6 @@ header nav a {
 }
 
 div img {
-    background-color: white;
     max-height: 5rem;
     max-width: 10rem;
 }
@@ -43,12 +45,14 @@ div img {
 /* Main */
 main .titulo {
     margin: 35px 25px;
+    font-family: var(--inter);
 }
 
 main div section {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    font-family: var(--inter);
 }
 
 main div section ul {
@@ -126,7 +130,12 @@ footer div .nav-bar i {
     margin-top: 0.5rem;
 }
 
-@media (max-width: 361px) {
+@media (max-width: 420px) {
+  
+    footer .footer2 {
+        padding: 0.5rem;
+        font-size: 0.7rem;
+    }
 
 } 
 
@@ -180,4 +189,10 @@ footer div .nav-bar i {
         margin-bottom: 2rem;
     }
 
+}
+
+@media (min-width: 1200px) {
+    main div section .ul-fecha {
+        width: 20%;
+    }
 }
