Cambiando una parte del código en css

--- a/views/productCart.html
+++ b/views/productCart.html
@@ -43,7 +43,7 @@
 
                 </ul>
 
-                <ul>
+                <ul class="ul-fecha">
 
                     <li> <h3> Fecha</h3> </li>
                     <li> <p> Del xx/xx al xx/xx </p> </li>
@@ -65,7 +65,7 @@
 
                 </ul>
 
-                <ul>
+                <ul class="ul-fecha">
 
                     <li> <h3> Fecha</h3> </li>
                     <li> <p> Del xx/xx al xx/xx </p> </li>
@@ -86,7 +86,7 @@
                     <li> <p> Av.Pellegrini 937, Tierra del Fuego </p> </li> 
                 </ul>
 
-                <ul>
+                <ul class="ul-fecha">
 
                     <li> <h3> Fecha</h3> </li>
                     <li> <p> Del xx/xx al xx/xx </p> </li>
