--- a/views/productCart.html
+++ b/views/productCart.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reservas</title>
-    <link rel="stylesheet" href="../public/css/productCart.css">
+    <link rel="stylesheet" href="/css/productCart.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300&family=Karla:wght@300&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
     <header>
 
         <div class="logo-header">
-            <img src="../public/images/logo-blanco-40trip.svg" alt="Logo de 40Trip">
+            <img src="/images/logo-blanco-40trip.svg" alt="Logo de 40Trip">
         </div>
 
         <nav class="menu-principal">
@@ -110,7 +110,7 @@
             <div class="footer1">
 
                 <div class="logo-footer">
-                    <img src="../public/images/logo-blanco-40trip.svg" alt="Logo de 40Trip">
+                    <img src="/images/logo-blanco-40trip.svg" alt="Logo de 40Trip">
                 </div>
 
                 <nav class="nav-bar">
