--- a/views/productCart.ejs
+++ b/views/productCart.ejs
@@ -106,39 +106,8 @@
 
     <footer>
 
-        <div>
-            <div class="footer1">
+        <%- include('partials/footer.ejs') %>
 
-                <div class="logo-footer">
-                    <img src="/images/logo-blanco-40trip.svg" alt="Logo de 40Trip">
-                </div>
-
-                <nav class="nav-bar">
-                    <ul>
-                        <li class="siguenos-en"> <h3> Síguenos en: </h3> </li>
-                    </ul> 
-
-                    <a href="https://es-la.facebook.com"> <i class="fab fa-facebook"></i> </a>    
-                    <a href="https://www.instagram.com"> <i class="fab fa-instagram"></i> </a>    
-
-                    <ul> 
-                        <li> <a href="#"> Condiciones generales </a> </li>
-                        <li> <a href="#"> Política de seguridad </a> </li>
-                        <li> <a href="#"> Términos y condiciones del uso del sitio </a> </li>
-                    </ul>
-                </nav>
-            </div>
-
-            <div class="footer2">
-                <p class="der-reservados"> © 2022 Todos los derechos reservados | </p>
-
-                <nav class="privacidad">
-                    <a href="#">Política de privacidad</a>
-                </nav>
-
-            </div>
-
-        </div>
 
     </footer>
 
