--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,9 +30,7 @@
             <label for="">Ingresá tu contraseña</label>
         </div>
 
-            <button type="submit"> Registrate</button>
-            <p>Al registrarse aceptas los <a href="">Terminos y Condiciones</a></p>
-        </div>
+            <button type="submit"> Ingresar </button>
             
                 <h4>Ingresá con un sólo paso.</h4>
             
@@ -40,11 +38,7 @@
                     <button type="button"> <a href=""><i class="fa-brands fa-facebook"></i>Ingresar con Facebook</a></button>
                     <button type="button"> <a href=""><i class="fa-brands fa-google"></i>Ingresar con Google</a></button>
                     <button type="button"> <a href=""><i class="fa-brands fa-apple"></i>Ingresar con Apple</a></button>
-        </div>
-                <h4>¿Ya tenés cuenta?</h4>
-        <div class="ingresar">
-                <button type="button">Ingresar</button>
-        </div>
+        
     </form>
 
 </body>
