--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -15,7 +15,27 @@
 
     <main>
 
-        <form action="post"></form>
+        <form action="post" id="edit">
+            <div class="edit">
+                <h1>Edita tu producto</h1>
+                    <div class="grupo">
+                        <input type="text" name="" id="name" required><span class="barra"></span>
+                        <label for=""> Nombre </label>
+                    </div>
+                <div class="grupo">
+                    <input type="text" name="" id="name" required><span class="barra"></span>
+                    <label for=""> Precio </label>
+                </div>
+    
+                <div class="grupo">
+                    <input type="text" name="" id="name" required><span class="barra"></span>
+                    <label for=""> Descripcion </label>
+                </div>
+    
+                <button type="submit"> Guardar cambios</button>
+                <button type="reset"> Eliminar cambios</button>
+            </div>
+        </form>
 
     </main>
 
