Agregando cambios en edit

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -10,8 +10,13 @@
 <body>
 
         <form action="post" id="edit">
-            <div class="edit">
-                <h1>Edita tu producto</h1>
+
+            <h1>Edita tu producto</h1>
+            <div>
+                <img src="" alt="Imagen del producto">
+            </div>
+
+            <div>
                     <div class="grupo">
                         <input type="text" name="" id="name" required><span class="barra"></span>
                         <label for=""> Nombre </label>
@@ -26,9 +31,10 @@
                     <label for=""> Descripcion </label>
                 </div>
     
-                <button type="submit"> Guardar cambios</button>
-                <button type="reset"> Eliminar cambios</button>
+                <button class="guardar" type="submit"> Guardar cambios</button>
+                <button class="borrar" type="reset"> Eliminar cambios</button>
             </div>
+
         </form>
 
 </body>
