--- a/public/css/edit.css
+++ b/public/css/edit.css
@@ -15,13 +15,42 @@
     --roboto: 'Roboto', sans-serif;
 }
 
+/* Header */
+header {
+    background-color: var(--azul);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header .logo-header {
+    margin: 20px;
+}
+
+header .menu-principal {
+    margin: 20px;
+    font-family: var(--roboto);
+}
+
+header nav a {
+    color: white;
+    text-decoration: none;
+}
+
+div img {
+    max-height: 5rem;
+    max-width: 10rem;
+}
+
+
 /* Form */
 form {
     background-color: var(--grisclaro);
     display: flex;
     padding: 2rem;
     flex-wrap: wrap;
-    height: 60vh;
+    height: 81vh;
+    width: 100vw;
 }
 
 form h1 {
@@ -31,22 +60,58 @@ form h1 {
     width: 100vw;
 }
 
+form .img-product {
+    width: 40vw;
+}
+
 form img {
     padding-right: 2rem;
+    margin-left: 10vw;
+}
+
+form .input {
+    justify-content: center;
+    width: 40vw;
+}
+
+form .input input {
+    width: 80%;
+    margin: 0.3rem 3rem 0.5rem 0;
+    border-radius: 5px;
+    border: none;
+}
+
+.input .descripcion {
+    height: 4rem;
+}
+
+button {
+    transition: background-color 0.3s ease;
+    cursor: pointer;
+    background-color: white;
+}
+
+button:hover {
+    background-color: var(--azul);
+    color: white;
+}
+
+.buttons {
+    width: 100vw;
+    text-align: center;
 }
 
 .guardar {
-width: 50vw;
+width: 30vw;
 padding: 0.5rem 0rem;
 border-radius: 5px;
-margin: 0.5rem 0;
-justify-content: center;
+text-align: center;
 }
 
 .borrar {
-    width: 50vw;
+    width: 30vw;
     padding: 0.5rem 0rem;
     border-radius: 5px;
-    margin: 0.5rem 0;
-    justify-content: center;
+    margin: 0 1rem 0 1rem;
+    text-align: center;
     }
