--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,31 +1,10 @@
 <header>
-    <div class="top-header">
-        <picture class="logo">
-            <img src="/images/logo-blanco-40trip.svg" alt="El logo de 40TRIP">
-        </picture>
-        <div class="header-links">
-         <div class="contact">
-          <p><i class="fa-solid fa-phone"></i> VENTAS: 0800-111-2345</p>
-          <p> Lunes a Viernes de 9 a 22. Sabados, Domingos y Feriados de 10 a 18H</p>
-         </div>
-          <a href=""><i class="fa-regular fa-pen-to-square"></i> Reserva</a>
-          <a href=""><i class="fa-regular fa-user"></i> Ingresar</a>
-        </div>
-      <nav>
-          <ul>
-              <li>
-                  <a href="">Destinos <i class="fa-solid fa-angle-down"></i></a>
-              </li>
-              <li>
-                  <a href="">Estilos de viaje <i class="fa-solid fa-angle-down"></i></a>
-              </li>
-              <li>
-                  <a href="">Recomendados <i class="fa-solid fa-angle-down"></i></a>
-              </li>
-              <li>
-                  <a href="">Nosotros <i class="fa-solid fa-angle-down"></i></a>
-              </li>
-          </ul>
-      </nav>
+
+    <div class="logo-header">
+        <img src="/images/logo-blanco-40trip.svg" alt="Logo de 40Trip">
     </div>
-  </header>
+
+    <nav class="menu-principal">
+        <a href="/">Menú principal</a> 
+    </nav>
+</header>
