Modificando archivo edit.ejs para que se vea mejor

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -22,24 +22,21 @@
 
         <form action="post" id="edit">
 
-            <h1>Edita tu producto</h1>
+            <h1> Editando: nombre del producto </h1>
             
-            <div class="img-product">
-                <img src="" alt="Imagen del producto">
-            </div>
-
             <div class="input">
+       
+                 <input class="nombre" type="text" name="" id="nombre" placeholder="Nombre:" required>
 
+                 <input class="precio" type="text" name="" id="precio" placeholder="Precio:" required> <br>
+                
+                 <input class="descuento" type="text" name="" id="descuento" placeholder="Descuento:" required>
                     
-                <label for=""> Nombre: </label> <br> <input type="text" name="" id="name" required> <br>
-
-                    
-                <label for=""> Precio: </label> <br> <input type="text" name="" id="name" required> <br>
-                    
-                    
-                <label for=""> Descripcion: </label> <br> <input class="descripcion" type="text" name="" id="name" required> <br>
+                 <input class="categoria" type="text" name="" id="categoria" placeholder="Categoría:" required> <br>
 
             </div>
+
+            <div class="descripcion"> <input type="text" name="" id="name" placeholder="Descripción:" required> <br> </div>
 
             <div class="buttons">
     
