Algunos cambios al header

--- a/views/partials/header-navbar.ejs
+++ b/views/partials/header-navbar.ejs
@@ -28,4 +28,7 @@
           </ul>
       </nav>
     </div>
+    <div class="burger-menu">
+        <i class="fas fa-bars"></i>
+        </div>
   </header>
