--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <%- include('partials/head', {title: 'Detalle del producto'}) %>
+    <%- include('partials/head', {title: 'Home'}) %>
     <link rel="stylesheet" href="/css/home.css">
 </head>
 <body>
