--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -20,9 +20,9 @@
 
     </header>
 
-        <form action="post" id="edit">
+        <form action="/edit/<%= product.id %>?_method=PATCH " method="POST" enctype="multipart/form-data" id="edit">
 
-            <h1> Editando: nombre del producto </h1>
+            <h1> Editando: <%= product.productName %>  </h1>
             
             <div class="input">
        
@@ -39,13 +39,15 @@
             <div class="descripcion"> <input type="text" name="" id="name" placeholder="Descripción:" required> <br> </div>
 
             <div class="buttons">
-    
+                
                 <button class="guardar" type="submit"> Guardar cambios</button>
-                <button class="borrar" type="reset"> Eliminar cambios</button>
+                
 
             </div>
 
         </form>
+
+        <form action="/delete/<%= product.id %>?_method=DELETE" method="POST" enctype="multipart/form-data"> <button class="borrar" type="reset"> Eliminar producto</button> </form>
 
 </body>
 </html>
